# rust-ser-write

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: rust.yml
ser-write-json/: Cargo.toml  README.md
ser-write-json/examples/: custom_bytes.rs
ser-write-json/examples/embedded/: Cargo.toml  README.md  embedded.rs
ser-write-json/src/: base64.rs  de.rs  lib.rs  ser.rs
ser-write-json/tests/: de_any.rs  ex_machine.rs
ser-write-msgpack/: Cargo.toml  README.md
ser-write-msgpack/examples/: serde.rs
ser-write-msgpack/examples/embedded/: Cargo.toml  README.md  embedded.rs
ser-write-msgpack/src/: de.rs  lib.rs  ser.rs
src/: foreign.rs  lib.rs
