[package]
name = "ser-write"
description = "Common traits for writer-style serializers and deserializers designed for no-std targets"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
version = "0.1.0"
edition = "2021"
keywords = ["embedded", "serde"]
categories = ["no-std"]
homepage = "https://github.com/royaltm/rust-ser-write"
repository = "https://github.com/royaltm/rust-ser-write"
license = "MIT OR Apache-2.0"
readme = "README.md"
include = ["src/", "/README.md", "/LICENSE-MIT","/LICENSE-APACHE"]
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []
alloc = []
arrayvec = ["dep:arrayvec"]
heapless = ["dep:heapless"]

[dependencies]
arrayvec = { version = "0.7", default-features = false, optional = true }
heapless = { version = "0.8", default-features = false, optional = true }

[workspace]
resolver = "2"
default-members = [
  ".",
  "ser-write-json",
  "ser-write-msgpack"
]
members = [
  ".",
  "ser-write-json",
  "ser-write-json/examples/embedded",
  "ser-write-msgpack",
  "ser-write-msgpack/examples/embedded"
]
