[package]
name = "ser-write-json"
description = "JSON serializer for ser-write and deserializer for convenience"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
version = "0.4.0"
edition = "2024"
keywords = ["embedded", "serde", "json"]
categories = ["no-std"]
homepage = "https://github.com/royaltm/rust-ser-write"
repository = "https://github.com/royaltm/rust-ser-write"
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["examples","tests"]
rust-version = "1.87"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["ser-write/std"]
alloc = ["ser-write/alloc"]
# deserialize any float using f32 instead of f64
de-any-f32 = []

[dependencies]
ryu-js = { version = "1.0", default-features = false }
serde = { version = "1.0.219", default-features = false }
ser-write = { version = "0.4", path = "..", default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
